优化UI展示